tests/baselines/reference/parserUnterminatedGeneric1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,23): error TS2304: Cannot find name 'IPromise_'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,46): error TS2304: Cannot find name 'IPromise_'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,56): error TS1005: '>' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts (3 errors) ====
     interface IQService {
            all(promises: IPromise_ < any > []): IPromise_<
                          ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise_'.
                                                 ~~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise_'.
                                                           
!!! error TS1005: '>' expected.